crates/tuna/tests/parser/fail/super-local.som
"test:
fail-message:
  - contains: define
  - contains: super
"

SuperLocal = (
  test = (
    |super|

    'you shant pass'
  )
)
